--- a/index.html
+++ b/index.html
@@ -53,6 +53,18 @@
           </svg>
         </button>
       </div>
+      
+      
+      <div class="mobile-menu is-open">
+
+        <div class="container                mobile-menu-container">
+          <button class="mobile-menu-close-btn">Close</button>
+          <nav class="mobile-menu-nav">Navigation</nav>
+            <address>Address</address>
+          <div>Soc Link</div>
+        </div>
+
+      </div>
     </header>
     <!-- #endregion header  -->
 
@@ -609,5 +621,6 @@
     </div>
 
     <!-- #endregion Modal window -->
+  <script src="./js/modal.js"></script>
   </body>
 </html>
