--- a/index.html
+++ b/index.html
@@ -46,16 +46,18 @@
             </li>
           </ul>
         </address>
-        <button class="burger-btn button" type="button">
+        <button class="burger-btn button" type="button" data-menu-open>
           <svg class="burger-icon" width="24" height="24">
             <use href="./images/icons.svg#icon-burger-icon"></use>
           </svg>
         </button>
       </div>
 
-      <div class="mobile-menu is-open">
+      <!-- <menu> -->
+
+      <div class="mobile-menu is-open" data-menu>
         <div class="container mobile-menu-container">
-          <button type="button" class="mobile-menu-close-btn">
+          <button type="button" class="mobile-menu-close-btn" data-menu-close>
             <svg class="subscribe-icon-close" width="8" height="8">
               <use href="./images/icons.svg#icon-close"></use>
             </svg>
@@ -142,7 +144,7 @@
     </header>
     <!-- #endregion header  -->
 
-    <main class="hidden">
+    <main>
       <!-- #region section-title -->
       <section class="section-title">
         <div class="container">
@@ -156,7 +158,7 @@
       <!-- #endregion section-title -->
 
       <!-- #region section-strategy -->
-      <section class="section-strategy">
+      <section class="section-strategy hidden">
         <div class="container">
           <h2 class="visually-hidden">Our Features</h2>
           <ul class="list-feature">
@@ -217,7 +219,7 @@
       <!-- #endregion section-strategy -->
 
       <!-- #region section-fotos -->
-      <section class="section-fotos">
+      <section class="section-fotos hidden">
         <div class="container">
           <h2 class="our_team">Our Team</h2>
           <ul class="list-foto">
@@ -375,7 +377,7 @@
       <!-- #endregion section-fotos -->
 
       <!-- #region portfolio -->
-      <section class="section portfolio-section">
+      <section class="section portfolio-section hidden">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -696,5 +698,6 @@
 
     <!-- #endregion Modal window -->
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
