--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
     <main>
       <!-- #region section-title -->
-      <section class="section-title">
+      <section class="section-title hidden">
         <div class="container">
           <h1 class="main-title">
             Effective Solutions<br />
@@ -158,7 +158,7 @@
       <!-- #endregion section-title -->
 
       <!-- #region section-strategy -->
-      <section class="section-strategy hidden">
+      <section class="section-strategy">
         <div class="container">
           <h2 class="visually-hidden">Our Features</h2>
           <ul class="list-feature">
