--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       <!-- #endregion section-title -->
 
       <!-- #region section-strategy -->
-      <section class="section-strategy">
+      <section class="section-strategy hidden">
         <div class="container">
           <h2 class="visually-hidden">Our Features</h2>
           <ul class="list-feature">
@@ -219,7 +219,7 @@
       <!-- #endregion section-strategy -->
 
       <!-- #region section-fotos -->
-      <section class="section-fotos hidden">
+      <section class="section-fotos">
         <div class="container">
           <h2 class="our_team">Our Team</h2>
           <ul class="list-foto">
