--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
       <!-- #endregion section-strategy -->
 
       <!-- #region section-fotos -->
-      <section class="section-fotos">
+      <section class="section-fotos hidden">
         <div class="container">
           <h2 class="our_team">Our Team</h2>
           <ul class="list-foto">
@@ -377,7 +377,7 @@
       <!-- #endregion section-fotos -->
 
       <!-- #region portfolio -->
-      <section class="section portfolio-section hidden">
+      <section class="section portfolio-section">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
