--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
       <!-- #endregion section-fotos -->
 
       <!-- #region portfolio -->
-      <section class="section portfolio-section">
+      <section class="section portfolio-section hidden">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -504,7 +504,7 @@
     </main>
 
     <!-- #region footer -->
-    <footer class="footer-logo-cont hidden">
+    <footer class="footer-logo-cont">
       <div class="container">
         <div class="footer-logo-block">
           <a class="footer-logo" href="./index.html"
