--- a/index.html
+++ b/index.html
@@ -509,7 +509,8 @@
 
     <footer class="footer-logo-cont">
       <div class="container">
-        <div class="footer-logo-block">
+
+        <div class="footer-logo-block footer-logo-div">
           <a class="footer-logo" href="./index.html"
             >Web
             <span class="icon-nav-footer">Studio</span>
@@ -520,7 +521,7 @@
             marketing & growth solutions.
           </p>
         </div>
-        <div class="footer-social-block">
+        <div class="footer-social-block footer-logo-div">
           <p class="footer-text">Social media</p>
           <ul class="footer-social">
             <li class="social-icon">
@@ -569,7 +570,7 @@
             </li>
           </ul>
         </div>
-        <div class="footer-subscription">
+        <div class="footer-subscription footer-logo-div">
           <p class="subscribe-title">Subscribe</p>
           <form class="subscription-form">
             <label class="label-footer" for="footer-email">
