--- a/index.html
+++ b/index.html
@@ -224,7 +224,9 @@
           <h2 class="our_team">Our Team</h2>
           <ul class="list-foto">
             <li class="foto-li">
-              <img src="./images/img-Mark-Guerrero.jpg" alt="Mark Guerrero" />
+              <img src="./images/img-Mark-Guerrero.jpg" 
+              srcset="./images/img-Mark-Guerrero 2x.jpg 2x"
+              alt="Mark Guerrero" />
               <div class="foto-info">
                 <h3 class="foto-title">Mark Guerrero</h3>
                 <p class="foto-text">Product Designer</p>
@@ -261,7 +263,9 @@
               </div>
             </li>
             <li class="foto-li">
-              <img src="./images/img-Tom-Ford.jpg" alt="Tom Ford" />
+              <img src="./images/img-Tom-Ford.jpg" 
+              srcset="./images/img-Tom-Ford 2x.jpg 2x"
+              alt="Tom Ford" />
               <div class="foto-info">
                 <h3 class="foto-title">Tom Ford</h3>
                 <p class="foto-text">Frontend Developer</p>
@@ -298,7 +302,9 @@
               </div>
             </li>
             <li class="foto-li">
-              <img src="./images/img-Camila-Garcia.jpg" alt="Camila Garcia" />
+              <img src="./images/img-Camila-Garcia.jpg" 
+              srcset="./images/img-Camila-Garcia 2x.jpg 2x"
+              alt="Camila Garcia" />
               <div class="foto-info">
                 <h3 class="foto-title">Camila Garcia</h3>
                 <p class="foto-text">Marketing</p>
@@ -335,7 +341,9 @@
               </div>
             </li>
             <li class="foto-li">
-              <img src="./images/img-Daniel-Wilson.jpg" alt="Daniel Wilson" />
+              <img src="./images/img-Daniel-Wilson.jpg"
+              srcset="./images/img-Daniel-Wilson 2x.jpg 2x"
+              alt="Daniel Wilson" />
               <div class="foto-info">
                 <h3 class="foto-title">Daniel Wilson</h3>
                 <p class="foto-text">UI Designer</p>
@@ -385,6 +393,7 @@
               <div class="portfolio-image">
                 <img
                   src="./images/Banking-App.jpg"
+                  srcset="./images/Banking-App 2x.jpg 2x"
                   alt="Banking App"
                   width="360"
                 />
@@ -407,6 +416,7 @@
               <div class="portfolio-image">
                 <img
                   src="./images/Cashless-Payment.jpg"
+                  srcset="./images/Cashless-Payment 2x.jpg 2x"
                   alt="Cashless Payment"
                   width="360"
                 />
@@ -426,6 +436,7 @@
               <div class="portfolio-image">
                 <img
                   src="./images/Meditation-App.jpg"
+                  srcset="./images/Meditation-App 2x.jpg 2x"
                   alt="Meditation App"
                   width="360"
                 />
@@ -444,6 +455,7 @@
               <div class="portfolio-image">
                 <img
                   src="./images/Taxi-Service.jpg"
+                  srcset="./images/Taxi-Service 2x.jpg 2x"
                   alt="Taxi Service"
                   width="360"
                 />
@@ -463,6 +475,7 @@
               <div class="portfolio-image">
                 <img
                   src="./images/Screen-Illustrations.jpg"
+                  srcset="./images/Screen-Illustrations 2x.jpg 2x"
                   alt="Screen Illustrations"
                   width="360"
                 />
@@ -482,6 +495,7 @@
               <div class="portfolio-image">
                 <img
                   src="./images/Online-Courses.jpg"
+                  srcset="./images/Online-Courses 2x.jpg 2x"
                   alt="Online Courses"
                   width="360"
                 />
