--- a/index.html
+++ b/index.html
@@ -158,13 +158,13 @@
       <!-- #endregion section-title -->
 
       <!-- #region section-strategy -->
-      <section class="section-strategy hidden">
+      <section class="section-strategy">
         <div class="container">
           <h2 class="visually-hidden">Our Features</h2>
           <ul class="list-feature">
             <li class="feature-block-item">
               <div class="icon-container">
-                <svg class="" width="64" height="64">
+                <svg class="svg-icon-strategy hidden" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -177,7 +177,7 @@
 
             <li class="feature-block-item">
               <div class="icon-container">
-                <svg class="" width="64" height="64">
+                <svg class="svg-icon-strategy hidden" width="64" height="64">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -190,7 +190,7 @@
 
             <li class="feature-block-item">
               <div class="icon-container">
-                <svg class="" width="64" height="64">
+                <svg class="svg-icon-strategy hidden" width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -203,7 +203,7 @@
 
             <li class="feature-block-item">
               <div class="icon-container">
-                <svg class="" width="64" height="64">
+                <svg class="svg-icon-strategy hidden" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
@@ -495,7 +495,7 @@
               <div class="portfolio-image">
                 <img
                   src="./images/Online-Courses.jpg"
-                  srcset="./images/Online-Courses 2x.jpg 2x"
+                  srcset="./images/ 2x"
                   alt="Online Courses"
                   width="360"
                 />
