--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           <ul class="list-feature">
             <li class="feature-block-item">
               <div class="icon-container">
-                <svg class="svg-icon-strategy hidden" width="64" height="64">
+                <svg class="svg-icon-strategy" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -177,7 +177,7 @@
 
             <li class="feature-block-item">
               <div class="icon-container">
-                <svg class="svg-icon-strategy hidden" width="64" height="64">
+                <svg class="svg-icon-strategy" width="64" height="64">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -190,7 +190,7 @@
 
             <li class="feature-block-item">
               <div class="icon-container">
-                <svg class="svg-icon-strategy hidden" width="64" height="64">
+                <svg class="svg-icon-strategy" width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -203,7 +203,7 @@
 
             <li class="feature-block-item">
               <div class="icon-container">
-                <svg class="svg-icon-strategy hidden" width="64" height="64">
+                <svg class="svg-icon-strategy" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
