--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       <!-- #endregion section-title -->
 
       <!-- #region section-strategy -->
-      <section class="section-strategy">
+      <section class="section-strategy hidden">
         <div class="container">
           <h2 class="visually-hidden">Our Features</h2>
           <ul class="list-feature">
@@ -385,7 +385,7 @@
       <!-- #endregion section-fotos -->
 
       <!-- #region portfolio -->
-      <section class="section portfolio-section hidden">
+      <section class="section portfolio-section">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -495,7 +495,7 @@
               <div class="portfolio-image">
                 <img
                   src="./images/Online-Courses.jpg"
-                  srcset="./images/ 2x"
+                  srcset="./images/Online-Courses 2x.jpg 2x"
                   alt="Online Courses"
                   width="360"
                 />
