--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 
       <!-- #region portfolio -->
       <section class="section portfolio-section">
-        <div class="container">
+        <div class="container hidden">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
@@ -587,7 +587,6 @@
           <p class="subscribe-title">Subscribe</p>
           <form class="subscription-form">
             <label class="label-footer" for="footer-email">
-              Email
               <input
                 type="email"
                 id="footer-email"
