--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             <li class="foto-li">
               <img
                 src="./images/img-Mark-Guerrero.jpg"
-                srcset="./images/img-Mark-Guerrero 2x.jpg 2x"
+                srcset="./images/img-Mark-Guerrero2x.jpg 2x"
                 alt="Mark Guerrero"
               />
               <div class="foto-info">
@@ -269,7 +269,7 @@
             <li class="foto-li">
               <img
                 src="./images/img-Tom-Ford.jpg"
-                srcset="./images/img-Tom-Ford 2x.jpg 2x"
+                srcset="./images/img-Tom-Ford2x.jpg 2x"
                 alt="Tom Ford"
               />
               <div class="foto-info">
@@ -310,7 +310,7 @@
             <li class="foto-li">
               <img
                 src="./images/img-Camila-Garcia.jpg"
-                srcset="./images/img-Camila-Garcia 2x.jpg 2x"
+                srcset="./images/img-Camila-Garcia2x.jpg 2x"
                 alt="Camila Garcia"
               />
               <div class="foto-info">
@@ -351,7 +351,7 @@
             <li class="foto-li">
               <img
                 src="./images/img-Daniel-Wilson.jpg"
-                srcset="./images/img-Daniel-Wilson 2x.jpg 2x"
+                srcset="./images/img-Daniel-Wilson2x.jpg 2x"
                 alt="Daniel Wilson"
               />
               <div class="foto-info">
@@ -403,7 +403,7 @@
               <div class="portfolio-image">
                 <img
                   src="./images/Banking-App.jpg"
-                  srcset="./images/Banking-App 2x.jpg 2x"
+                  srcset="./images/Banking-App2x.jpg 2x"
                   alt="Banking App"
                   width="360"
                 />
@@ -426,7 +426,7 @@
               <div class="portfolio-image">
                 <img
                   src="./images/Cashless-Payment.jpg"
-                  srcset="./images/Cashless-Payment 2x.jpg 2x"
+                  srcset="./images/Cashless-Payment2x.jpg 2x"
                   alt="Cashless Payment"
                   width="360"
                 />
@@ -446,7 +446,7 @@
               <div class="portfolio-image">
                 <img
                   src="./images/Meditation-App.jpg"
-                  srcset="./images/Meditation-App 2x.jpg 2x"
+                  srcset="./images/Meditation-App2x.jpg 2x"
                   alt="Meditation App"
                   width="360"
                 />
@@ -465,7 +465,7 @@
               <div class="portfolio-image">
                 <img
                   src="./images/Taxi-Service.jpg"
-                  srcset="./images/Taxi-Service 2x.jpg 2x"
+                  srcset="./images/Taxi-Service2x.jpg 2x"
                   alt="Taxi Service"
                   width="360"
                 />
@@ -485,7 +485,7 @@
               <div class="portfolio-image">
                 <img
                   src="./images/Screen-Illustrations.jpg"
-                  srcset="./images/Screen-Illustrations 2x.jpg 2x"
+                  srcset="./images/Screen-Illustrations2x.jpg 2x"
                   alt="Screen Illustrations"
                   width="360"
                 />
@@ -505,7 +505,7 @@
               <div class="portfolio-image">
                 <img
                   src="./images/Online-Courses.jpg"
-                  srcset="./images/Online-Courses 2x.jpg 2x"
+                  srcset="./images/Online-Courses2x.jpg 2x"
                   alt="Online Courses"
                   width="360"
                 />
