--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
       <!-- <menu> -->
 
-      <div class="mobile-menu is-open" data-menu>
+      <div class="mobile-menu" data-menu>
         <div class="container mobile-menu-container">
           <button type="button" class="mobile-menu-close-btn" data-menu-close>
             <svg class="subscribe-icon-close" width="8" height="8">
@@ -407,10 +407,7 @@
                   alt="Banking App"
                   width="360"
                 />
-                <p
-                  class="portfolio-description"
-                  style="--text-color: #f4f4fd; color: var(--text-color)"
-                >
+                <p class="portfolio-description">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
@@ -602,7 +599,6 @@
                 class="email-input"
                 placeholder="E-mail"
                 required
-                style="color: #ffffff"
               />
             </label>
             <button type="submit" class="subscribe-btn">
@@ -618,7 +614,7 @@
     <!-- #endregion footer -->
 
     <!-- #region Modal window -->
-    <div class="backdrop is-open" data-modal>
+    <div class="backdrop" data-modal>
       <div class="modal-drop">
         <button
           type="button"
@@ -711,11 +707,7 @@
                   <use href="./images/icons/check.svg#icon-check"></use>
                 </svg>
               </span>
-              <a
-                href="#"
-                class="privacy-policy-link"
-                target="_blank"
-                style="color: var(--color-blue, #4d5ae5)"
+              <a href="#" class="privacy-policy-link" target="_blank"
                 >Privacy Policy</a
               >
             </label>
@@ -723,7 +715,8 @@
           <button type="submit" class="btn-submit">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
+    -->
 
     <!-- #endregion Modal window -->
     <script src="./js/modal.js"></script>
