--- a/index.html
+++ b/index.html
@@ -148,10 +148,7 @@
       <!-- #region section-title -->
       <section class="section-title">
         <div class="container">
-          <h1 class="main-title">
-            Effective Solutions<br />
-            for Your Business
-          </h1>
+          <h1 class="main-title">Effective Solutions for Your Business</h1>
           <button type="button" data-modal-open class="order-btn">
             Order Service
           </button>
