--- a/index.html
+++ b/index.html
@@ -698,15 +698,18 @@
               required
             />
             <label class="label-checkbox" for="user-privacy">
-              I accept the terms and conditions of the
               <span class="checkbox-span">
                 <svg class="checkbox-icon" width="10" height="8">
-                  <use href="./images/icons/check.svg#icon-check"></use>
+                  <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
+
+              <span class="checkbox-text">  
+              I accept the terms and conditions of the
               <a href="#" class="privacy-policy-link" target="_blank"
                 >Privacy Policy</a
               >
+              </span>
             </label>
           </div>
           <button type="submit" class="btn-submit">Send</button>
