--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       </div>
     </header>
     <!-- #endregion header  -->
- 
+
     <main>
       <!-- #region section-title -->
       <section class="section-title">
@@ -225,8 +225,13 @@
             <li class="foto-li">
               <img
                 src="./images/img-Mark-Guerrero.jpg"
-                srcset="./images/img-Mark-Guerrero2x.jpg 2x"
+                srcset="
+                  ./images/img-Mark-Guerrero.jpg   1x,
+                  ./images/img-Mark-Guerrero2x.jpg 2x
+                "
                 alt="Mark Guerrero"
+                width="264"
+                height="260"
               />
               <div class="foto-info">
                 <h3 class="foto-title">Mark Guerrero</h3>
@@ -266,8 +271,13 @@
             <li class="foto-li">
               <img
                 src="./images/img-Tom-Ford.jpg"
-                srcset="./images/img-Tom-Ford2x.jpg 2x"
+                srcset="
+                  ./images/img-Tom-Ford.jpg   1x,
+                  ./images/img-Tom-Ford2x.jpg 2x
+                "
                 alt="Tom Ford"
+                width="264"
+                height="260"
               />
               <div class="foto-info">
                 <h3 class="foto-title">Tom Ford</h3>
@@ -307,8 +317,13 @@
             <li class="foto-li">
               <img
                 src="./images/img-Camila-Garcia.jpg"
-                srcset="./images/img-Camila-Garcia2x.jpg 2x"
+                srcset="
+                  ./images/img-Camila-Garcia.jpg   1x,
+                  ./images/img-Camila-Garcia2x.jpg 2x
+                "
                 alt="Camila Garcia"
+                width="264"
+                height="260"
               />
               <div class="foto-info">
                 <h3 class="foto-title">Camila Garcia</h3>
@@ -348,8 +363,13 @@
             <li class="foto-li">
               <img
                 src="./images/img-Daniel-Wilson.jpg"
-                srcset="./images/img-Daniel-Wilson2x.jpg 2x"
+                srcset="
+                  ./images/img-Daniel-Wilson.jpg   1x,
+                  ./images/img-Daniel-Wilson2x.jpg 2x
+                "
                 alt="Daniel Wilson"
+                width="264"
+                height="260"
               />
               <div class="foto-info">
                 <h3 class="foto-title">Daniel Wilson</h3>
@@ -400,9 +420,10 @@
               <div class="portfolio-image">
                 <img
                   src="./images/Banking-App.jpg"
-                  srcset="./images/Banking-App2x.jpg 2x"
+                  srcset="./images/Banking-App.jpg 1x, ./images/Banking-App2x.jpg 2x"
                   alt="Banking App"
-                  width="360"
+                  width="288"
+                  height="280"
                 />
                 <p class="portfolio-description">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -420,9 +441,10 @@
               <div class="portfolio-image">
                 <img
                   src="./images/Cashless-Payment.jpg"
-                  srcset="./images/Cashless-Payment2x.jpg 2x"
+                  srcset="./images/Cashless-Payment.jpg 1x, ./images/Cashless-Payment2x.jpg 2x"
                   alt="Cashless Payment"
-                  width="360"
+                  width="288"
+                  height="280"
                 />
                 <p class="portfolio-description">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -440,9 +462,10 @@
               <div class="portfolio-image">
                 <img
                   src="./images/Meditation-App.jpg"
-                  srcset="./images/Meditation-App2x.jpg 2x"
+                  srcset="./images/Meditation-App.jpg 1x, ./images/Meditation-App2x.jpg 2x"
                   alt="Meditation App"
-                  width="360"
+                  width="288"
+                  height="280"
                 />
                 <p class="portfolio-description">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -459,9 +482,10 @@
               <div class="portfolio-image">
                 <img
                   src="./images/Taxi-Service.jpg"
-                  srcset="./images/Taxi-Service2x.jpg 2x"
+                  srcset="./images/Taxi-Service.jpg 1x, ./images/Taxi-Service2x.jpg 2x"
                   alt="Taxi Service"
-                  width="360"
+                  width="288"
+                  height="280"
                 />
                 <p class="portfolio-description">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -479,9 +503,10 @@
               <div class="portfolio-image">
                 <img
                   src="./images/Screen-Illustrations.jpg"
-                  srcset="./images/Screen-Illustrations2x.jpg 2x"
+                  srcset="./images/Screen-Illustrations.jpg 1x, ./images/Screen-Illustrations2x.jpg 2x"
                   alt="Screen Illustrations"
-                  width="360"
+                  width="288"
+                  height="280"
                 />
                 <p class="portfolio-description">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -499,9 +524,10 @@
               <div class="portfolio-image">
                 <img
                   src="./images/Online-Courses.jpg"
-                  srcset="./images/Online-Courses2x.jpg 2x"
+                  srcset="./images/Online-Courses.jpg 1x, ./images/Online-Courses2x.jpg 2x"
                   alt="Online Courses"
-                  width="360"
+                  width="288"
+                  height="280"
                 />
                 <p class="portfolio-description">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -531,9 +557,8 @@
             <span class="icon-nav-footer">Studio</span>
           </a>
           <p class="footer-text">
-            Increase the flow of customers and<br />
-            sales for your business with digital<br />
-            marketing & growth solutions.
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
           </p>
         </div>
         <div class="footer-social-block footer-logo-div">
@@ -704,11 +729,11 @@
                 </svg>
               </span>
 
-              <span class="checkbox-text">  
-              I accept the terms and conditions of the
-              <a href="#" class="privacy-policy-link" target="_blank"
-                >Privacy Policy</a
-              >
+              <span class="checkbox-text">
+                I accept the terms and conditions of the
+                <a href="#" class="privacy-policy-link" target="_blank"
+                  >Privacy Policy</a
+                >
               </span>
             </label>
           </div>
