--- a/index.html
+++ b/index.html
@@ -420,10 +420,13 @@
               <div class="portfolio-image">
                 <img
                   src="./images/Banking-App.jpg"
-                  srcset="./images/Banking-App.jpg 1x, ./images/Banking-App2x.jpg 2x"
+                  srcset="
+                    ./images/Banking-App.jpg   1x,
+                    ./images/Banking-App2x.jpg 2x
+                  "
                   alt="Banking App"
-                  width="288"
-                  height="280"
+                  width="360"
+                  height="300"
                 />
                 <p class="portfolio-description">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -441,10 +444,13 @@
               <div class="portfolio-image">
                 <img
                   src="./images/Cashless-Payment.jpg"
-                  srcset="./images/Cashless-Payment.jpg 1x, ./images/Cashless-Payment2x.jpg 2x"
+                  srcset="
+                    ./images/Cashless-Payment.jpg   1x,
+                    ./images/Cashless-Payment2x.jpg 2x
+                  "
                   alt="Cashless Payment"
-                  width="288"
-                  height="280"
+                  width="360"
+                  height="300"
                 />
                 <p class="portfolio-description">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -462,10 +468,13 @@
               <div class="portfolio-image">
                 <img
                   src="./images/Meditation-App.jpg"
-                  srcset="./images/Meditation-App.jpg 1x, ./images/Meditation-App2x.jpg 2x"
+                  srcset="
+                    ./images/Meditation-App.jpg   1x,
+                    ./images/Meditation-App2x.jpg 2x
+                  "
                   alt="Meditation App"
-                  width="288"
-                  height="280"
+                  width="360"
+                  height="300"
                 />
                 <p class="portfolio-description">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -482,10 +491,13 @@
               <div class="portfolio-image">
                 <img
                   src="./images/Taxi-Service.jpg"
-                  srcset="./images/Taxi-Service.jpg 1x, ./images/Taxi-Service2x.jpg 2x"
+                  srcset="
+                    ./images/Taxi-Service.jpg   1x,
+                    ./images/Taxi-Service2x.jpg 2x
+                  "
                   alt="Taxi Service"
-                  width="288"
-                  height="280"
+                  width="360"
+                  height="300"
                 />
                 <p class="portfolio-description">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -503,10 +515,13 @@
               <div class="portfolio-image">
                 <img
                   src="./images/Screen-Illustrations.jpg"
-                  srcset="./images/Screen-Illustrations.jpg 1x, ./images/Screen-Illustrations2x.jpg 2x"
+                  srcset="
+                    ./images/Screen-Illustrations.jpg   1x,
+                    ./images/Screen-Illustrations2x.jpg 2x
+                  "
                   alt="Screen Illustrations"
-                  width="288"
-                  height="280"
+                  width="360"
+                  height="300"
                 />
                 <p class="portfolio-description">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -524,10 +539,13 @@
               <div class="portfolio-image">
                 <img
                   src="./images/Online-Courses.jpg"
-                  srcset="./images/Online-Courses.jpg 1x, ./images/Online-Courses2x.jpg 2x"
+                  srcset="
+                    ./images/Online-Courses.jpg   1x,
+                    ./images/Online-Courses2x.jpg 2x
+                  "
                   alt="Online Courses"
-                  width="288"
-                  height="280"
+                  width="360"
+                  height="300"
                 />
                 <p class="portfolio-description">
                   14 Stylish and User-Friendly App Design Concepts · Task
